# hudson-news-bot

./: .containerignore  .coverage  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  AGENT.md  AGENTS.md  Containerfile  Makefile  README.md  compose.cron.yml  compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: build-and-push.yml
config/: config.toml  praw.ini.example
config/prompts/: analysis.jinja  system.jinja
docs/plans/: 2026-03-01-switch-to-opencode-zen-design.md  2026-03-01-switch-to-opencode-zen.md  2026-03-02-prompt-externalization-design.md  2026-03-02-prompt-externalization.md
scripts/: entrypoint.sh  run-hudson-bot.sh
src/hudson_news_bot/: main.py
src/hudson_news_bot/config/: settings.py
src/hudson_news_bot/news/: aggregator.py  models.py  scraper.py
src/hudson_news_bot/reddit/: client.py  deduplicator.py
src/hudson_news_bot/utils/: logging.py  toml_handler.py
tests/: test_aggregator.py  test_config.py  test_config_types.py  test_cookie_persistence.py  test_deduplicator.py  test_logging_simple.py  test_models.py  test_reddit_client_simple.py  test_scraper.py  test_scraper_cache.py  test_scraper_dedup.py  test_toml_handler.py
