[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hudson-news-bot"
version = "0.1.0"
description = "News aggregation bot with Reddit integration using Claude SDK"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.11.0",
  "asyncpraw>=7.8.1",
  "beautifulsoup4>=4.12.0",
  "claude-code-sdk>=0.0.20",
  "playwright>=1.49.0",
  "tomli-w>=1.2.0",
]

[project.scripts]
hudson-news-bot = "hudson_news_bot.main:sync_main"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "mypy>=1.17.1",
  "pyright>=1.1.403",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.8",
  "tomli-w>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hudson_news_bot"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--cov=hudson_news_bot",
  "--cov-report=term-missing",
  "--cov-report=html",
]
